--- a/app/src/main/res/layout/fragment_login_data.xml
+++ b/app/src/main/res/layout/fragment_login_data.xml
@@ -12,18 +12,19 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="120dp"
         android:ems="10"
-        android:hint="E-mal cím"
+        android:hint="@string/emailEditText"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:autofillHints="" />
 
     <EditText
         android:id="@+id/editText2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="Jelszó"
+        android:hint="@string/passwordEditText"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="32dp"
-        android:text="->"
+        android:text="@string/uiNextArrow"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
