--- a/app/src/main/res/layout/fragment_meta_data.xml
+++ b/app/src/main/res/layout/fragment_meta_data.xml
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:text="Nem: "
+        android:text="@string/sex"
         app:layout_constraintBottom_toBottomOf="@+id/spinner"
         app:layout_constraintEnd_toStartOf="@+id/spinner"
         app:layout_constraintTop_toTopOf="@+id/spinner" />
@@ -39,7 +39,7 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Születési év: "
+        android:text="@string/labelBirthDate"
         app:layout_constraintBottom_toBottomOf="@+id/spinnerBirthDate"
         app:layout_constraintEnd_toStartOf="@+id/spinnerBirthDate"
         app:layout_constraintTop_toTopOf="@+id/spinnerBirthDate" />
@@ -50,22 +50,24 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:hint="Testsúly (kg)"
+        android:hint="@string/labelWeightKg"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinnerBirthDate" />
+        app:layout_constraintTop_toBottomOf="@+id/spinnerBirthDate"
+        android:autofillHints="" />
 
     <EditText
         android:id="@+id/editText5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="Testmagasság (cm)"
+        android:hint="@string/labelHeightCm"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText4" />
+        app:layout_constraintTop_toBottomOf="@+id/editText4"
+        android:autofillHints="" />
 
     <Button
         android:id="@+id/btnMDNext"
@@ -73,7 +75,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="32dp"
-        android:text="->"
+        android:text="@string/uiNextArrow"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
