--- a/app/src/main/res/layout/fragment_diary.xml
+++ b/app/src/main/res/layout/fragment_diary.xml
@@ -48,7 +48,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tvDiaryDate" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/tvConsumed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -57,22 +57,22 @@
         app:layout_constraintTop_toBottomOf="@+id/divider" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/tvBurned"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="@string/diaryBurned"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/tvConsumed" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/tvRemaining"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="@string/diaryRemaining"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        app:layout_constraintTop_toBottomOf="@+id/tvBurned" />
 
     <View
         android:id="@+id/divider2"
@@ -82,7 +82,7 @@
         android:background="?android:attr/listDivider"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        app:layout_constraintTop_toBottomOf="@+id/tvRemaining" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="409dp"
