--- a/app/src/main/res/layout/activity_search_mn_e.xml
+++ b/app/src/main/res/layout/activity_search_mn_e.xml
@@ -16,12 +16,12 @@
         android:ems="10"
         android:hint="@android:string/search_go"
         android:inputType="text"
-        app:layout_constraintEnd_toStartOf="@+id/imageButton"
+        app:layout_constraintEnd_toStartOf="@+id/btnSearchMnE"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/btnSearchMnE"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
