OnClickListener interface for MEListAdapter

--- a/app/src/main/res/layout/fragment_diary.xml
+++ b/app/src/main/res/layout/fragment_diary.xml
@@ -51,6 +51,7 @@
         android:id="@+id/tvConsumed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="@string/diaryConsumed"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,6 +61,7 @@
         android:id="@+id/tvBurned"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="@string/diaryBurned"
         app:layout_constraintStart_toStartOf="parent"
@@ -69,6 +71,7 @@
         android:id="@+id/tvRemaining"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="@string/diaryRemaining"
         app:layout_constraintStart_toStartOf="parent"
