--- a/app/src/main/res/layout/activity_edit_meal.xml
+++ b/app/src/main/res/layout/activity_edit_meal.xml
@@ -40,22 +40,15 @@
         app:layout_constraintEnd_toStartOf="@+id/etEditMealAmount"
         app:layout_constraintTop_toTopOf="@+id/etEditMealAmount" />
 
-    <Spinner
-        android:id="@+id/spEditMealServingSize"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toEndOf="@+id/etEditMealAmount"
-        app:layout_constraintTop_toBottomOf="@+id/etEditMealAmount" />
-
     <TextView
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
         android:text="Serving size: "
-        app:layout_constraintBottom_toBottomOf="@+id/spEditMealServingSize"
-        app:layout_constraintEnd_toEndOf="@+id/textView7"
-        app:layout_constraintTop_toTopOf="@+id/spEditMealServingSize" />
+        app:layout_constraintBottom_toBottomOf="@+id/textView3"
+        app:layout_constraintEnd_toStartOf="@+id/textView3"
+        app:layout_constraintTop_toTopOf="@+id/textView3" />
 
     <EditText
         android:id="@+id/etEditMealTimeStamp"
@@ -64,9 +57,8 @@
         android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="time"
-        app:layout_constraintEnd_toEndOf="@+id/spEditMealServingSize"
-        app:layout_constraintStart_toStartOf="@+id/spEditMealServingSize"
-        app:layout_constraintTop_toBottomOf="@+id/spEditMealServingSize" />
+        app:layout_constraintStart_toStartOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <TextView
         android:id="@+id/textView9"
@@ -141,5 +133,14 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="grams"
+        app:layout_constraintStart_toStartOf="@+id/etEditMealAmount"
+        app:layout_constraintTop_toBottomOf="@+id/etEditMealAmount" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
