--- a/app/src/main/res/layout/list_item_mne.xml
+++ b/app/src/main/res/layout/list_item_mne.xml
@@ -10,8 +10,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -33,7 +33,18 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="@+id/tvResultItemTitle"
+        app:layout_constraintBottom_toBottomOf="@+id/ivResultItemType"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tvResultItemTitle" />
+        app:layout_constraintTop_toTopOf="@+id/ivResultItemType" />
+
+    <TextView
+        android:id="@+id/tvResultItemAdditional"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="2dp"
+        android:text="TextView"
+        android:textSize="12sp"
+        app:layout_constraintStart_toStartOf="@+id/tvResultItemTitle"
+        app:layout_constraintTop_toBottomOf="@+id/tvResultItemTitle" />
 </androidx.constraintlayout.widget.ConstraintLayout>
