--- a/app/src/main/res/layout/activity_create_profile.xml
+++ b/app/src/main/res/layout/activity_create_profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CreateProfileActivity">
+    tools:context=".ui.createprofile.CreateProfileActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -28,7 +28,7 @@
             android:background="?attr/colorPrimary" />
     </com.google.android.material.appbar.AppBarLayout>
 
-    <com.undef.fitapp.ui.custom.NonSwipeableViewPager
+    <com.undef.fitapp.custom.NonSwipeableViewPager
         android:id="@+id/viewPagerCP"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
