--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="com.undef.fitapp.ui.diary.DiaryFragment"
+        android:name="com.undef.fitapp.ui.diary.fragment.DiaryFragment"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_diary">
 
