Registration and instant login after it implemented

--- a/app/src/main/res/layout/fragment_meta_data.xml
+++ b/app/src/main/res/layout/fragment_meta_data.xml
@@ -26,24 +26,6 @@
         app:layout_constraintEnd_toStartOf="@+id/spSex"
         app:layout_constraintTop_toTopOf="@+id/spSex" />
 
-    <Spinner
-        android:id="@+id/spBirthDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spSex" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/labelBirthDate"
-        app:layout_constraintBottom_toBottomOf="@+id/spBirthDate"
-        app:layout_constraintEnd_toStartOf="@+id/spBirthDate"
-        app:layout_constraintTop_toTopOf="@+id/spBirthDate" />
-
     <EditText
         android:id="@+id/etRegWeight"
         android:layout_width="wrap_content"
@@ -55,7 +37,7 @@
         android:inputType="numberDecimal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spBirthDate" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
 
     <EditText
         android:id="@+id/etRegHeight"
@@ -90,5 +72,48 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spSex">
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:text="@string/labelBirthDate"
+            android:textAlignment="center" />
+
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Spinner
+                android:id="@+id/spBirthDateYear"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content" />
+
+            <Spinner
+                android:id="@+id/spBirthDateMonth"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <Spinner
+                android:id="@+id/spBirthDateDay"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+        </LinearLayout>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
