--- a/app/src/main/res/layout/fragment_mapexercise.xml
+++ b/app/src/main/res/layout/fragment_mapexercise.xml
@@ -16,17 +16,18 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+
+        android:layout_marginBottom="16dp"
 
         android:background="@drawable/rounded_rectangle"
         android:paddingStart="30dp"
         android:paddingTop="5dp"
         android:paddingEnd="30dp"
         android:paddingBottom="5dp"
-
-        android:layout_margin="10dp"
-
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/mapView"
         app:layout_constraintStart_toStartOf="parent">
@@ -38,7 +39,10 @@
             android:text="00:00:00"
             android:textSize="36sp"
             app:layout_constraintBottom_toTopOf="@+id/btnTrackStartStop"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.28"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/btnTrackStartStop"
@@ -46,7 +50,35 @@
             android:layout_height="wrap_content"
             android:text="Start"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="@+id/tvTrackTimer" />
+
+        <Button
+            android:id="@+id/btnTrackPause"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:text="||"
+            app:layout_constraintBottom_toBottomOf="@+id/btnTrackStartStop"
+            app:layout_constraintEnd_toEndOf="@+id/tvTrackTimer"
+            app:layout_constraintStart_toEndOf="@+id/btnTrackStartStop"
+            app:layout_constraintTop_toTopOf="@+id/btnTrackStartStop" />
+
+        <TextView
+            android:id="@+id/tvTrackSpeed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:text="Speed:\n0 m/s"
+            android:textAlignment="center"
+            app:layout_constraintStart_toEndOf="@+id/tvTrackTimer"
+            app:layout_constraintTop_toTopOf="@+id/tvTrackTimer" />
+
+        <TextView
+            android:id="@+id/tvTrackDistance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="Distance:\n0.0 km"
+            app:layout_constraintStart_toStartOf="@+id/tvTrackSpeed"
+            app:layout_constraintTop_toBottomOf="@+id/tvTrackSpeed" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
