--- a/app/src/main/res/layout/fragment_mapexercise.xml
+++ b/app/src/main/res/layout/fragment_mapexercise.xml
@@ -12,8 +12,21 @@
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <com.jaredrummler.materialspinner.MaterialSpinner
+        android:id="@+id/spTrackActivityChooser"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/mapView"
+        app:ms_hint="@string/select_activity_type"
+        app:ms_hint_color="#777777" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
@@ -21,8 +34,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
 
-        android:layout_marginBottom="16dp"
-
+        android:layout_marginBottom="8dp"
         android:background="@drawable/rounded_rectangle"
         android:paddingStart="30dp"
         android:paddingTop="5dp"
@@ -41,8 +53,7 @@
             app:layout_constraintBottom_toTopOf="@+id/btnTrackStartStop"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.28"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <Button
             android:id="@+id/btnTrackStartStop"
@@ -66,7 +77,7 @@
             android:id="@+id/tvTrackSpeed"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="24dp"
             android:text="Speed:\n0 m/s"
             android:textAlignment="center"
             app:layout_constraintStart_toEndOf="@+id/tvTrackTimer"
@@ -78,7 +89,10 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="Distance:\n0.0 km"
+            android:textAlignment="center"
+            app:layout_constraintEnd_toEndOf="@+id/tvTrackSpeed"
             app:layout_constraintStart_toStartOf="@+id/tvTrackSpeed"
             app:layout_constraintTop_toBottomOf="@+id/tvTrackSpeed" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
