--- a/app/src/main/res/layout/dialog_gps_exercise_result.xml
+++ b/app/src/main/res/layout/dialog_gps_exercise_result.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cl1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -44,8 +45,7 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="16dp"
         android:text="GPS exercise result"
         android:textColor="@android:color/black"
         android:textSize="24sp"
@@ -70,7 +70,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
-        android:text="Activity type: Run"
+        android:text="Activity type: @"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/divider6" />
@@ -80,7 +80,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Distance travelled: 0.0 km"
+        android:text="Distance travelled: @ km"
         app:layout_constraintStart_toStartOf="@+id/tvERactivityType"
         app:layout_constraintTop_toBottomOf="@+id/tvERactivityType" />
 
@@ -89,7 +89,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Duration of exercise: 0 minutes"
+        android:text="Duration of exercise: @"
         app:layout_constraintStart_toStartOf="@+id/tvERdistance"
         app:layout_constraintTop_toBottomOf="@+id/tvERdistance" />
 
@@ -98,7 +98,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Burned: 0 kcals"
+        android:text="Burned: @ kcals"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/tvERavgSpeed"
         app:layout_constraintTop_toBottomOf="@+id/tvERavgSpeed" />
@@ -108,7 +108,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Average speed: 0.0 m/s"
+        android:text="Average speed: @ m/s"
         app:layout_constraintStart_toStartOf="@+id/tvERduration"
         app:layout_constraintTop_toBottomOf="@+id/tvERduration" />
 </androidx.constraintlayout.widget.ConstraintLayout>
