--- a/app/src/main/res/menu/home.xml
+++ b/app/src/main/res/menu/home.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/previous_gps_exer"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="Previous GPS Exercises"
         app:showAsAction="never" />
 </menu>
